Improved ServletContainers Markdown content and prepared for Maven / Gradle katas.